add more label types

--- a/docs/volunteering/github/labels.mdx
+++ b/docs/volunteering/github/labels.mdx
@@ -6,15 +6,24 @@ BobaBoard uses labels to classify issues and feature requests according to a var
 
 For ease of reference, labels are further divided in the following macro-categories:
 
-- **🎨 Thematic labels** indicate the overall theme of the issue or feature request.
-- **🛠 Skills labels**: indicate the technical skills necessary to tackle the issue or feature request.
-- **🔥 Priority labels**: indicate the priority of the issue or feature request.
+- [**🎨 Thematic labels**](#thematic-labels) indicate the overall theme of the issue or feature request.
+- [**🛠 Skills labels**](#skills-labels) indicate the technical skills necessary to tackle the issue or feature request.
+- [**📦 Repository labels**](#repository-labels) indicate the repositories the issue or feature request touches upon.
+- [**🔥 Priority labels**](#priority-labels) indicate the priority of the issue or feature request.
 
 You can click on any of these labels to see the associated issues.
 
 ## Thematic labels
 
 <FilteredLabelsList prefix="🎨" />
+
+## Skills labels
+
+<FilteredLabelsList prefix="🛠" />
+
+## Repository labels
+
+<FilteredLabelsList prefix="📦" />
 
 ## Priority labels
 
