add new types of labels to the docs

--- a/docs/volunteering/github/labels.mdx
+++ b/docs/volunteering/github/labels.mdx
@@ -9,9 +9,16 @@ For ease of reference, labels are further divided in the following macro-categor
 - [**🎨 Thematic labels**](#thematic-labels) indicate the overall theme of the issue or feature request.
 - [**🛠 Skills labels**](#skills-labels) indicate the technical skills necessary to tackle the issue or feature request.
 - [**📦 Repository labels**](#repository-labels) indicate the repositories the issue or feature request touches upon.
+- [**⏩ Stage labels**](#stage-labels) indicate the next step in the issue-tackling process.
+- [**💪 Work-type labels**](#work-type-labels) indicate special characteristic of the work surrounding the issue.
 - [**🔥 Priority labels**](#priority-labels) indicate the priority of the issue or feature request.
+- [**🌟 Special labels**](#special-labels) indicate the issue meets certain special criteria.
 
-You can click on any of these labels to see the associated issues.
+We also have a set of [**other labels**](#other-labels) that do not fit in these categories.
+
+:::tip
+Click on any label to see the associated issues.
+:::
 
 ## Thematic labels
 
@@ -25,6 +32,22 @@ You can click on any of these labels to see the associated issues.
 
 <FilteredLabelsList prefix="📦" />
 
+## Stage labels
+
+<FilteredLabelsList prefix="⏩ " />
+
+## Work-type labels
+
+<FilteredLabelsList prefix="💪 " />
+
 ## Priority labels
 
 <FilteredLabelsList prefix="🔥" />
+
+## Special labels
+
+<FilteredLabelsList prefix="🌟" />
+
+## Other Labels
+
+<FilteredLabelsList prefix="⛔️" />
