get the plugin to effectively work

--- a/docs/product/mockups/page.mdx
+++ b/docs/product/mockups/page.mdx
@@ -1,6 +1,3 @@
-import { Excalidraw } from "../../../src/components/Excalidraw";
-const excalidrawImg = require("./board_background.excalidraw").default;
-
 # Mockups
 
 In this section you can find low-res mockups of the various components that form BobaBoard. These are made
@@ -9,11 +6,7 @@ to play around with design proposals.
 
 ## Layout
 
-<Excalidraw src={excalidrawImg} />
+![test](./board_background.excalidraw)
 
-asdas asdsds sdas
-asdasd
-asdasdas
-sfsdfsdasdas
-dasdas
-asdasdsasdas
+For now, this is the only one we have, mostly because Ms Boba went into a rabbit hole about integrating
+excalidraw into MDX files.
