--- a/plugins/excalidraw-mdx-plugin/__tests__/page.mdx
+++ b/plugins/excalidraw-mdx-plugin/__tests__/page.mdx
@@ -1,3 +1,5 @@
+import ExcalidrawComponent from "../src/ExcalidrawComponent.tsx";
+
 # Mockups
 
 In this section you can find low-res mockups of the various components that form BobaBoard. These are made
@@ -7,6 +9,8 @@ to play around with design proposals.
 ## Layout
 
 ![test](./board_background.excalidraw)
+
+<ExcalidrawComponent src="dadsa" />
 
 asdas asdsds sdas
 asdasd
