--- a/docusaurus/docs/volunteering/github/labels.mdx
+++ b/docusaurus/docs/volunteering/github/labels.mdx
@@ -7,10 +7,12 @@ BobaBoard uses labels to classify issues and feature requests according to a var
 For ease of reference, labels are further divided in the following macro-categories:
 
 - [**🎨 Thematic labels**](#thematic-labels) indicate the overall theme of the issue or feature request.
+- [**🐞 Type labels**](#type-labels) indicate the overall theme of the issue or feature request.
 - [**🛠 Skills labels**](#skills-labels) indicate the technical skills necessary to tackle the issue or feature request.
+- [**🛶 Size labels**](#size-labels) indicate the amount of work necessary to tackle the issue or feature request.
+- [**🌤 Difficulty labels**](#difficulty-labels) indicate the overall difficulty of the issue or feature request.
 - [**📦 Repository labels**](#repository-labels) indicate the repositories the issue or feature request touches upon.
 - [**⏩ Stage labels**](#stage-labels) indicate the next step in the issue-tackling process.
-- [**💪 Work-type labels**](#work-type-labels) indicate special characteristic of the work surrounding the issue.
 - [**🔥 Priority labels**](#priority-labels) indicate the priority of the issue or feature request.
 - [**🌟 Special labels**](#special-labels) indicate the issue meets certain special criteria.
 
@@ -24,9 +26,28 @@ Click on any label to see the associated issues.
 
 <FilteredLabelsList prefix="🎨" />
 
+## Type labels
+
+<FilteredLabelsList prefix="🪳" />
+<FilteredLabelsList prefix="🐞" />
+<FilteredLabelsList prefix="🕷" />
+<FilteredLabelsList prefix="🪲" />
+
 ## Skills labels
 
 <FilteredLabelsList prefix="🛠" />
+
+## Size labels
+
+<FilteredLabelsList prefix="🛶" />
+<FilteredLabelsList prefix="⛵️" />
+<FilteredLabelsList prefix="🚢" />
+
+## Difficulty labels
+
+<FilteredLabelsList prefix="🌤" />
+<FilteredLabelsList prefix="☁️" />
+<FilteredLabelsList prefix="⛈️" />
 
 ## Repository labels
 
@@ -34,11 +55,8 @@ Click on any label to see the associated issues.
 
 ## Stage labels
 
+<FilteredLabelsList prefix="⛔️" />
 <FilteredLabelsList prefix="⏩ " />
-
-## Work-type labels
-
-<FilteredLabelsList prefix="💪 " />
 
 ## Priority labels
 
@@ -46,8 +64,8 @@ Click on any label to see the associated issues.
 
 ## Special labels
 
+<FilteredLabelsList prefix="🦵" />
 <FilteredLabelsList prefix="🌟" />
-
-## Other Labels
-
-<FilteredLabelsList prefix="⛔️" />
+<FilteredLabelsList prefix="🚨" />
+<FilteredLabelsList prefix="🚧" />
+<FilteredLabelsList prefix="💪" />
