add mobile layout mockup

--- a/docusaurus/docs/product/mockups/page.mdx
+++ b/docusaurus/docs/product/mockups/page.mdx
@@ -10,3 +10,7 @@ to play around with design proposals.
 
 For now, this is the only one we have, mostly because Ms Boba went into a rabbit hole about integrating
 excalidraw into MDX files.
+
+![test](./mobile-board.excalidraw)
+
+Now we have another, because Ms Boba is drunk with power
