fix broken links

--- a/docusaurus/docs/product/roadmap/priorities-and-status.mdx
+++ b/docusaurus/docs/product/roadmap/priorities-and-status.mdx
@@ -8,7 +8,7 @@ _Last updated: October 13th, 2022_
 
 **Current phase:** pre-beta.
 
-This page offers a global overview of BobaBoard's current roadmap. You can also check out [our active sprints and projects](./sprint-and-projects)
+This page offers a global overview of BobaBoard's current roadmap. You can also check out [our active sprints and projects](./sprints-and-projects)
 for more specific details.
 
 ## Current priorities
@@ -74,4 +74,4 @@ processes.
 After this phase is over, we'll go back to working on Realms, and begin to focus on finding the right community managers
 to lead our further expansion.
 
-For the most up-to-date information, check the [sprints and projects](./sprint-and-projects) page.
+For the most up-to-date information, check the [sprints and projects](./sprints-and-projects) page.
