polish up github plugin and don't throw on invalid token

--- a/docusaurus/docs/product/roadmap/sprints-and-projects.mdx
+++ b/docusaurus/docs/product/roadmap/sprints-and-projects.mdx
@@ -19,11 +19,11 @@ If you're interested in officially joining a current or future sprint, contact M
 
 ### Current sprints
 
-<ProjectsList type="sprint" status="active" />
+<ProjectsList type="sprint" status="current" />
 
 ### Future sprints
 
-<ProjectsList type="sprint" status="upcoming" />
+<ProjectsList type="sprint" status="future" />
 
 ### Closed sprints
 
