added clarifying note to Command Line Guide

--- a/docusaurus/docs/engineering/start-developing/wsl.mdx
+++ b/docusaurus/docs/engineering/start-developing/wsl.mdx
@@ -24,6 +24,7 @@ If you're using another Linux distro you can add a second distro by
 
 The guide uses the Windows logo <FontAwesomeIcon icon={faWindows} /> to indicate
 items that should be installed directly to Windows, while the Linux logo
+
 <FontAwesomeIcon icon={faLinux} /> indicates items that should be installed into
 your chosen Linux distro (Ubuntu).
 
@@ -261,6 +262,15 @@ and WSL.
 
 ## Quick Command Line Guide
 
+:::note
+
+These commands are the ones you should use in your Linux/Ubuntu terminal in WSL.
+In general, when researching what commands to use or how to install things for
+WSL, you should be referring to Linux instructions. If you're ever unsure, feel
+free to ask in the Volunteer Server and we'll be happy to help!
+
+:::
+
 - `cd [folder_name]` or `cd [path]` **c**hanges **d**irectory to the folder or
   path provided. (Note: For folders with spaces you should enclose the folder
   name with single or double quotes.)
@@ -270,7 +280,8 @@ and WSL.
   - `cd ~` moves you to your home directory. (Note: in WSL, this is your user
     folder.)
 
-- `code .` if you've installed VS Code, this will open your current folder in VS Code.
+- `code .` if you've installed VS Code, this will open your current folder in VS
+  Code.
 
 - `ls` lists the files and folders in your current directory.
 
