corrected line break in note

--- a/docusaurus/docs/engineering/start-developing/wsl.mdx
+++ b/docusaurus/docs/engineering/start-developing/wsl.mdx
@@ -23,9 +23,7 @@ If you're using another Linux distro you can add a second distro by
 :::note
 
 The guide uses the Windows logo <FontAwesomeIcon icon={faWindows} /> to indicate
-items that should be installed directly to Windows, while the Linux logo
-
-<FontAwesomeIcon icon={faLinux} /> indicates items that should be installed into
+items that should be installed directly to Windows, while the Linux logo <FontAwesomeIcon icon={faLinux} /> indicates items that should be installed into
 your chosen Linux distro (Ubuntu).
 
 :::
