trying to fix the linux logo wonkiness

--- a/docusaurus/docs/engineering/start-developing/wsl.mdx
+++ b/docusaurus/docs/engineering/start-developing/wsl.mdx
@@ -23,8 +23,9 @@ If you're using another Linux distro you can add a second distro by
 :::note
 
 The guide uses the Windows logo <FontAwesomeIcon icon={faWindows} /> to indicate
-items that should be installed directly to Windows, while the Linux logo <FontAwesomeIcon icon={faLinux} /> indicates items that should be installed into
-your chosen Linux distro (Ubuntu).
+items that should be installed directly to Windows, while the Linux logo
+<FontAwesomeIcon icon={faLinux} /> indicates items that should be installed
+into your chosen Linux distro (Ubuntu).
 
 :::
 
@@ -43,7 +44,7 @@ Before you start, we recommend that you install the latest version of Windows
 Powershell and Windows Terminal. Windows Terminal automatically integrates with
 WSL and offers a command prompt in your Linux distro. The most recent version
 should be Powershell 7.x. Follow
-[these instructions](https://learn.microsoft.com/en-us/windows/wsl/install#install-wsl-command)
+[these instructions](https://learn.microsoft.com/en-us/powershell/scripting/install/installing-powershell-on-windows?view=powershell-7.3)
 to install the most recent version. If you also have Powershell 5 installed, we
 recommend that you uninstall it, as Windows occasionally gets confused
 concerning your default terminal.
